# ci-cd-security-policy-gate

./: .gitignore  .policy-gate.yml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
ci_cd_security_policy_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: architecture.md  roadmap.md  rules.md  threat-model.md
examples/: demo-output.txt  insecure-workflow.yml  secure-workflow.yml
policy_gate/: __init__.py  cli.py  config.py  exit_codes.py  findings.py  formatter.py  models.py  repo_discovery.py  scanner.py
policy_gate/parsers/: github_actions.py
policy_gate/rules/: __init__.py  base.py  committed_secrets.py  missing_lockfiles.py  permissions_write_all.py  pull_request_target.py  unpinned_actions.py  unsafe_shell_commands.py
policy_gate/utils/: file_helpers.py  yaml_helpers.py
tests/: conftest.py  test_cli.py  test_parser_github_actions.py  test_rule_committed_secrets.py  test_rule_missing_lockfiles.py  test_rule_permissions_write_all.py  test_rule_pull_request_target.py  test_rule_unpinned_actions.py  test_rule_unsafe_shell_commands.py
tests/fixtures/workflows/: safe.yml  unsafe.yml
